# libatspi2-examples

./: CMakeLists.txt  README
src/: test_atspi.c
